Changed logo and a CFP link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="row">
         <div class="container">
             <div class="col-sm-6 logo">
-                <h1><a href="/"><img src="./static/images/logo.png" alt="daydev 2016"></a></h1>
+                <h1><a href="/"><img src="./static/images/logo.svg" alt="DevDay 2016"></a></h1>
             </div>
             <div class="col-sm-6 place-text phones-screen"><span class="marker inline-element"></span> <span>Kraków, 14 - 16 October 2016</span></div>
             <div class="col-sm-6 socials medium-screen">
@@ -39,7 +39,7 @@
             <div class="col-sm-7">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2><a href="#">Call for Papers is now OPEN!</a></h2>
+                        <h2><a href="http://cfp.devday.pl">Call for Papers is now OPEN!</a></h2>
                     </div>
                 </div>
                 <div class="row">
