--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>DevDay 2016</title>
-    <link rel="shortcut icon" href="">
+    <link href="favicon.ico" rel="shortcut icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="./static/css/stylesheets.css">
+    <meta property="og:url" content="http://devday.pl" />
+    <meta property="og:title" content="DevDay 2016" />
+    <meta property="og:description" content="Official website for DevDay 2016 conference" />
+    <meta property="og:image" content="http://devday.pl/static/images/shape@2x.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@abbdevday">
+    <meta name="twitter:creator" content="@abbdevday">
+    <meta name="twitter:title" content="DevDay 2016">
+    <meta name="twitter:description" content="Official website for DevDay 2016 conference">
+    <meta name="twitter:image" content="http://devday.pl/static/images/shape@2x.png">
+</head>
     <!--[if IE]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -95,7 +106,7 @@
                 <li><a href="http://www.abb.pl/cawp/plabb041/db06a6d30a51783fc1257905002669e6.aspx">2011</a></li>
                 </ul>
             </div>
-            <div class="col-sm-3"><span>Founded by</span> <span class="abb-logo inline-element"></span></div>
+            <div class="col-sm-3"><span>Founded by</span> <a href="http://new.abb.com/pl/o-nas/technologie/centrum-systemow-informatycznych-abb"><span class="abb-logo inline-element"></span></a></div>
         </div>
     </footer>
     <script src="./static/javascript/retina.min.js"></script>
