Remove CFP info.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-sm-7">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2><a href="http://cfp.devday.pl">Call for Papers is now OPEN!</a></h2>
+                        <h2>The website launches soon!</h2>
                     </div>
                 </div>
                 <div class="row">
